--- a/frontend/app/assets/html/miaov/qqyanzheng.html
+++ b/frontend/app/assets/html/miaov/qqyanzheng.html
@@ -7,9 +7,14 @@
 <body>
     <input id="qq-num" type="text">
     <input id="sub-btn" type="button" value="输入正确的qq号">
-    <input id="bg-color" type="color">
+    <input id="bg-color" type="color">'
     <input type="range">
     <script type="text/javascript">
+        // qq号不为空
+        // 长度大于5小于10
+        // 第一个数字不能为0
+        // qq号中不能有非数字
+        // 不能为负
         window.onload = function(){
             var subBtn = document.getElementById('sub-btn');
             var bgColor = document.getElementById('bg-color');
@@ -19,9 +24,7 @@
             subBtn.onclick = function(){
             var qqNum = document.getElementById('qq-num').value;
             var qqLength = qqNum.length;
-                console.log(qqNum.charAt(0));
-                console.log(isNaN(qqNum));
-                if ((qqLength<5 || qqLength >11) && (qqNum.charAt(0) !== 0 || !isNaN(qqNum))) {
+                if (qqLength<5 || qqLength >11 || qqNum.charAt(0) == 0 || qqNum.charAt(0) == '-' || isNaN(qqNum)) {
                     alert('请输入正确的qq号');
                 }
             }
