--- a/frontend/app/assets/html/cartoon/cartoon-helloKity.html
+++ b/frontend/app/assets/html/cartoon/cartoon-helloKity.html
@@ -41,15 +41,18 @@
             </div>
         </div>
         <div class="kity-body">
-            <div class="arm-left">
-                <div class="hand"></div>
-            </div>
-            <div class="arm-right">
-                <div class="hand"></div>
-            </div>
-            <div class="belly"></div>
+        </div>
+        <div class="leg">
             <div class="leg-left"></div>
             <div class="leg-right"></div>
+        </div>
+        <div class="arm">
+            <div class="arm-left">
+            </div>
+            <div class="hand-left"></div>
+            <div class="arm-right">
+            </div>
+            <div class="hand-right"></div>
         </div>
     </div>
 </body>
