--- a/frontend/app/assets/html/miaov/jishuqi.html
+++ b/frontend/app/assets/html/miaov/jishuqi.html
@@ -52,9 +52,9 @@
                 var quanTity = countObj.getElementsByClassName('quantity');
                 var unitPrice = countObj.getElementsByClassName('unit-price');
                 var totalPrice = countObj.getElementsByClassName('total-price')[0];
-                var n = 0;
                 
                 addBtn.onclick = function(){
+                    var n = 0;
                     quanTity[0].innerHTML = parseInt(quanTity[0].innerHTML)+1;
                     totalPrice.innerHTML = quanTity[0].innerHTML * parseFloat(unitPrice[0].innerHTML);
                     sumItem++;
@@ -82,6 +82,9 @@
                         totalItem.innerHTML = sumItem;
                         sumSpent -= parseFloat(unitPrice[0].innerHTML);
                         totalSpend[0].innerHTML = sumSpent;
+                    }
+                    if (parseInt(quanTity[0].innerHTML) == 0) {
+
                     }
                     totalPrice.innerHTML = quanTity[0].innerHTML * parseFloat(unitPrice[0].innerHTML);
                 }
