--- a/frontend/app/assets/html/test.html
+++ b/frontend/app/assets/html/test.html
@@ -113,7 +113,21 @@
 
 
 
+        //实参、形参
 
+        // fn1(1,3,4);
+        // function fn1(){
+        //     alert(arguments.length);
+        // }
+
+
+        // style
+
+        // getComputedStyle  currentStyle
+
+        function getStyle(obj,attr){
+            return obj.currentStyle[attr] ? obj.currentStyle[attr] : getComputedStyle(obj)[attr];
+        }
 
     </script>
 </body>
